--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 								<h2 class="footer-heading">Get In Touch</h2>
 								<p class="mb-2"><i class="fa fa-map-marker me-3"></i> 123 Street, New York, USA</p>
 								<p class="mb-2"><i class="fa fa-phone me-3"></i> +91 99999 99999</p>
-								<p class="mb-2"><i class="fa fa-envelope me-3"></i> yourmail@email.com</p>
+								<p class="mb-2"><i class="fa fa-envelope me-3"></i> youremail@email.com</p>
 							</div>
 							<div class="col-lg-4 col-md-6">
 								<h2 class="footer-heading">Follow Us</h2>
