--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 				</div>
 			</div>
 		</div>
+		<img style="height: 210px; width: 210px; margin:0 42%;" src="images/new-logo.png" alt="">
+
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+      
 	    <div class="container">
-	    	<a class="navbar-brand" href="index.html">Charted Accountant</a>
 	    	
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="fa fa-bars"></span> Menu
@@ -57,11 +59,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav m-auto">
 	        	<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-				<li class="nav-item"><a href="features.html" class="nav-link">Features</a></li>
-
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	        	<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	        </ul>
 	      </div>
 	    </div>
