--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</div>
 			</div>
 		</div>
-		<img style="height: 210px; width: 210px; margin:0 42%;" src="images/new-logo.png" alt="">
+		<img style="height: 210px; width: 210px;display: block; margin: auto;" src="images/new-logo.png" alt="">
 
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       
